# agent-desktop

./: .env.notarize.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  WINDOWS-DEV.md  cliff.toml  package-lock.json  package.json  svelte.config.js  vite.config.ts
.agent-desktop/: tasks.json
.claude/: REVIEW.md  workflow.yaml
.claude/skills/adversarial-code-review/: SKILL.md
.claude/skills/workflow/: SKILL.md
.claude/skills/workflow-build/: SKILL.md
.claude/skills/workflow-define/: SKILL.md
.claude/skills/workflow-done/: SKILL.md
.claude/skills/workflow-quick/: SKILL.md
.claude/skills/workflow-start/: SKILL.md
.githooks/: pre-commit
.github/: actionlint.yaml
.github/workflows/: release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-15T19-17-32Z__src-lib-onboarding-modelonboarding-svelte.md
.impeccable/live/: config.json
design/: .thumbnail  README.md  SKILL.md  colors_and_type.css
design/preview/: brand-iconography.html  brand-logomark.html  brand-wordmark.html  colors-blue.html  colors-orange.html  colors-semantic.html  colors-space.html  colors-text.html  comp-approval-card.html  comp-buttons.html  comp-inputs.html  comp-mission-card.html  comp-status-badges.html  overview-explorations.html  overview-inbox-tui.html  overview-inbox.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-body.html  type-display.html  type-mono.html  type-scale.html
design/ui_kits/marketing-site/: README.md  index.html  marketing.css  parts.jsx  parts2.jsx  site.jsx
design/ui_kits/mission-control-app/: AgentCard.jsx  Approval.jsx  Dashboard.jsx  LaunchModal.jsx  MissionDetail.jsx  ProjectPanel.jsx  README.md  StatusBar.jsx  app.css  app.jsx  index.html  ui.jsx
docs/: index.html  install.ps1  install.sh
docs/openspec-interview-addon/: README.md  config.yaml
docs/superpowers/plans/: 2026-06-04-agent-inbox-overview.md  2026-06-06-persistent-footer.md  2026-06-06-workflow-skills.md
docs/superpowers/specs/: 2026-05-30-agent-desktop-design.md  2026-06-03-agent-activity-event-pipeline-design.md  2026-06-04-agent-inbox-overview-design.md  2026-06-06-persistent-footer-design.md  2026-06-06-project-selector-logos-keynav-design.md  2026-06-06-workflow-skills-design.md  2026-06-08-workflow-define-plan-lanes-design.md
docs/tests/: fixtures-latest.json  install_ps_test.ps1  install_test.sh  lib.sh  run.sh
openspec/: config.yaml
openspec/changes/add-activity-event-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-agent-desktop/: design.md  proposal.md  tasks.md
openspec/changes/add-agent-specialists/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-alert-click-focus/: design.md  proposal.md  tasks.md
openspec/changes/add-background-remote-fetch/: tasks.md
openspec/changes/add-coordinator-notifications/: design.md  proposal.md  tasks.md
openspec/changes/add-delete-all-archived-agents/: tasks.md
openspec/changes/add-desktop-release-ci/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-dialog-autofocus/: proposal.md  workflow.json
openspec/changes/add-editor-link-workspace-root/: design.md  tasks.md  workflow.json
openspec/changes/add-first-launch-model-gate/: tasks.md
openspec/changes/add-git-sync-terminal-fallback/: proposal.md  workflow.json
openspec/changes/add-inbox-workflow-subagent-rows/: design.md  proposal.md  tasks.md
openspec/changes/add-launch-spinner/: proposal.md  tasks.md  workflow.json
openspec/changes/add-needs-input-alerts/: design.md  proposal.md  tasks.md
openspec/changes/add-project-auto-worktree/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-project-coordinator/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-project-folder-storage/: design.md  tasks.md  workflow.json
openspec/changes/add-project-push-pull-menu/: proposal.md  tasks.md  workflow.json
openspec/changes/add-quick-install/: design.md  proposal.md  tasks.md
openspec/changes/add-search-command-palette/: design.md  proposal.md  tasks.md
openspec/changes/add-session-auto-categorization/: design.md  proposal.md  tasks.md
openspec/changes/add-sessions-compact-mode/: proposal.md
openspec/changes/add-tasks-panel/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-terminal-file-links/: tasks.md
openspec/changes/add-terminals-panel/: design.md  tasks.md
openspec/changes/add-update-restart-pill/: design.md  tasks.md
openspec/changes/add-usage-bootstrap-session/: proposal.md  tasks.md  workflow.json
openspec/changes/add-voice-input/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/add-whisper-server-partials/: design.md  proposal.md  tasks.md  workflow.json
openspec/changes/agent-session-ux-improvements/: design.md  proposal.md  (+2 more)
scripts/: check-windows.sh  fetch-llama.sh  fetch-models.sh  fetch-whisper.sh  package-mac-signed.sh  release-gate.sh  sync-version.sh  validate-sidecars.sh
scripts/lib/: target-triple.sh
src/: app.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md
src-tauri/resources/: event-hook.cjs  event-hook.test.ts  orchestration-mcp.cjs  orchestration-mcp.test.ts  statusline-wrapper.cjs  statusline-wrapper.test.ts
src-tauri/src/: activity.rs  claude_title.rs  events.rs  git.rs  ipc.rs  lib.rs  models.rs  no_window.rs  notify_click.rs  orchestration.rs  polish.rs  pr.rs  project_store.rs  pty.rs  shell_path.rs  specialists.rs  subagents.rs  task.rs  transcribe.rs  usage.rs  vad.rs  voice_activation.rs  whisper_server.rs  workflow.rs
src-tauri/tests/: pty_integration.rs
src/lib/: TerminalPane.svelte  sanity.test.ts  terminalKeys.test.ts  terminalKeys.ts  terminalLinks.test.ts  terminalLinks.ts  terminalTheme.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tools/: check-localstorage.mjs  check-scenario-coverage.mjs
(+658 files in other folders)
