[package]
name = "agent-desktop"
version = "0.1.0"
description = "A Tauri + SvelteKit desktop terminal for running and watching Claude Code sessions."
authors = ["Arthur Pachachura"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# PTY-backed terminal core (Milestone 1+). Pinned at the crate's confirmed
# minor; the compiler validates the exact API surface in later stages.
portable-pty = "0.9"

# Filesystem watcher for the snapshot/task directories (Milestone 3+).
notify = "8"
tauri-plugin-dialog = "2.7.1"

# Native macOS NSEvent monitor for the voice-panel double-tap-right-Command
# gesture (see src/voice_activation.rs). objc2 0.6 / objc2-app-kit 0.3 are the
# tauri-2-compatible bindings (objc2 itself is already in the tree via the
# dialog plugin). block2 supplies the Objective-C block used as the event handler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
objc2-foundation = "0.3"
block2 = "0.6"
