[package]
name = "agent-desktop"
version = "0.1.0"
description = "A Tauri + SvelteKit desktop terminal for running and watching Claude Code sessions."
authors = ["Arthur Pachachura"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# PTY-backed terminal core (Milestone 1+). Pinned at the crate's confirmed
# minor; the compiler validates the exact API surface in later stages.
portable-pty = "0.9"

# Filesystem watcher for the snapshot/task directories (Milestone 3+).
notify = "8"
tauri-plugin-dialog = "2.7.1"

# Run the bundled whisper.cpp `whisper-cli` STT sidecar (Milestone 4 / voice
# input). The shell plugin's sidecar API resolves the externalBin binary named
# `whisper-cli-<target-triple>` and runs it; see src/transcribe.rs.
tauri-plugin-shell = "2"

# Streaming HTTP client for download-on-first-run of voice MODELS (Milestone 4 /
# tasks.md 5.2). `stream` gives us a chunked `bytes_stream()` so we can sum bytes
# and emit progress; `rustls-tls` avoids a system-OpenSSL build dependency.
# default-features off drops the default openssl-tls path.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "multipart"] }
futures-util = "0.3"

# Transcript-polish llama-server sidecar manager (see src/polish.rs). `once_cell`
# holds the single spawned child handle written exactly once; `tokio` (sync +
# time) serializes the lazy start across concurrent callers and sleeps between
# `/health` retries. Both are already in the tree transitively (tauri/reqwest);
# pinned here as direct deps for the explicit features we use.
once_cell = "1"
tokio = { version = "1", features = ["sync", "time"] }

# Native macOS NSEvent monitor for the voice-panel double-tap-right-Command
# gesture (see src/voice_activation.rs). objc2 0.6 / objc2-app-kit 0.3 are the
# tauri-2-compatible bindings (objc2 itself is already in the tree via the
# dialog plugin). block2 supplies the Objective-C block used as the event handler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
objc2-foundation = "0.3"
block2 = "0.6"
