[package]
name = "agent-desktop"
version = "0.3.0"
description = "A Tauri + SvelteKit desktop terminal for running and watching Claude Code sessions."
authors = ["Arthur Pachachura"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# PTY-backed terminal core (Milestone 1+). Pinned at the crate's confirmed
# minor; the compiler validates the exact API surface in later stages.
portable-pty = "0.9"

# Filesystem watcher for the snapshot/task directories (Milestone 3+).
notify = "8"
tauri-plugin-dialog = "2.7.1"

# Run the bundled whisper.cpp `whisper-cli` STT sidecar (Milestone 4 / voice
# input). The shell plugin's sidecar API resolves the externalBin binary named
# `whisper-cli-<target-triple>` and runs it; see src/transcribe.rs.
tauri-plugin-shell = "2"

# Native OS desktop notifications for the needs-input alerts (capability
# `needs-input-alerts`): when an agent enters the "Needs input" state the frontend
# requests permission and posts a notification via @tauri-apps/plugin-notification.
# Scope is granted by `notification:default` in capabilities/default.json.
tauri-plugin-notification = "2"

# Streaming HTTP client for download-on-first-run of voice MODELS (Milestone 4 /
# tasks.md 5.2). `stream` gives us a chunked `bytes_stream()` so we can sum bytes
# and emit progress; rustls avoids a system-OpenSSL build dependency.
# `rustls-tls-native-roots` (not plain `rustls-tls`) loads trust anchors from the
# OS trust store via rustls-native-certs instead of the bundled webpki-roots, so
# corporate TLS-inspecting proxies (e.g. Netskope) whose CA is installed in the
# system keychain are honored — otherwise model downloads fail the handshake on
# those networks even though the browser/curl succeed.
# default-features off drops the default openssl-tls path.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots", "multipart"] }
futures-util = "0.3"

# Transcript-polish llama-server sidecar manager (see src/polish.rs). `once_cell`
# holds the single spawned child handle written exactly once; `tokio` (sync +
# time) serializes the lazy start across concurrent callers and sleeps between
# `/health` retries. `process`/`io-util` drive the cloud title fallback
# (`claude -p`, see src/claude_title.rs): spawn the CLI, pipe messages to its
# stdin, and `wait_with_output` under a timeout. All already in the tree
# transitively (tauri/reqwest); pinned here as direct deps for the explicit
# features we use.
once_cell = "1"
tokio = { version = "1", features = ["sync", "time", "process", "io-util"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Place a dropped image on the OS clipboard so a Ctrl+V (0x16) into an agent PTY
# is ingested as an inline image attachment (terminal-file-drop). The clipboard
# plugin's Rust `ClipboardExt::write_image` is called directly from our own
# `copy_image_to_clipboard` command — no frontend IPC, so no extra capability is
# needed. `image` decodes any common format (png/jpeg/gif/webp/bmp) to the RGBA
# the clipboard image expects; default-features off drops the formats we don't
# accept (and their heavier codecs).
tauri-plugin-clipboard-manager = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
interprocess = { version = "2", default-features = false }

# Native macOS NSEvent monitor for the voice-panel double-tap-right-Command
# gesture (see src/voice_activation.rs). objc2 0.6 / objc2-app-kit 0.3 are the
# tauri-2-compatible bindings (objc2 itself is already in the tree via the
# dialog plugin). block2 supplies the Objective-C block used as the event handler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
objc2-foundation = "0.3"
block2 = "0.6"

# Custom macOS notification path for clickable needs-input alerts (capability
# `alert-click-focus`). The bundled notification plugin discards click events on
# desktop, so on macOS we send via this crate (which notify_rust wraps) with
# `wait_for_click(true)` to capture the body click and emit the alerting agent's
# paneId back to the frontend. Already in the tree transitively via the plugin;
# pinned here as a direct dep for the click-response API.
mac-notification-sys = "0.6"
